* backport r33140 from trunk

* numeric.c (flo_round): Avoid overflow by optimizing for trivial cases
  [Bug #5227]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_3@33141 b2dd03c8-39d4-4d8f-98ff-823fe69b080e